@@ -1,0 +1,7 @@
+## CLI command providers.
+# [document root]/.utils_cli_command_providers.ini
+utils = \SimpleComplex\Utils\CliUtils
+cache = \SimpleComplex\Cache\CliCache
+config = \SimpleComplex\Config\CliConfig
+json-log = \SimpleComplex\JsonLog\CliJsonLog
+locale-text = \SimpleComplex\Locale\CliLocaleText
