@@ -2,7 +2,7 @@
 /**
  * SimpleComplex PHP Utils
  * @link      https://github.com/simplecomplex/php-utils
- * @copyright Copyright (c) 2014-2017 Jacob Friis Mathiasen
+ * @copyright Copyright (c) 2017-2018 Jacob Friis Mathiasen
  * @license   https://github.com/simplecomplex/php-utils/blob/master/LICENSE (MIT License)
  */
 declare(strict_types=1);
@@ -24,8 +24,6 @@ use SimpleComplex\Utils\CliEnvironment;
 Bootstrap::prepareDependenciesIfExist();
 
 use SimpleComplex\Utils\Time;
-use SimpleComplex\Utils\TimeFreezable;
-use SimpleComplex\Utils\PathList;
 
 $environment = CliEnvironment::getInstance();
 
@@ -35,9 +33,6 @@ $environment = CliEnvironment::getInstance();
     $logger = $container->get('logger');
     /** @var \SimpleComplex\Inspect\Inspect $inspect */
     $inspect = $container->get('inspect');
-
-    $utils = \SimpleComplex\Utils\Utils::getInstance();
-
 
     $original = new Time('2018-06-30T09:05:11.123456+02:00');
 
@@ -50,94 +45,7 @@ $environment = CliEnvironment::getInstance();
             $original->toISOZonal('microseconds')
         ])
     );
-    return;
 
-
-    $original->addPart('month', 1);
-    $original->addPart('day', 4);
-    $logger->debug(
-        "timish\n"
-        . $inspect->variable([
-            '' . $original,
-            '',
-            '' . (clone $original)->addPart('month', 4),
-            '' . (clone $original)->addPart('month', 5),
-            '' . (clone $original)->addPart('month', 6),
-            '',
-            '' . (clone $original)->addPart('month', 4 + 12),
-            '' . (clone $original)->addPart('month', 5 + 12),
-            '' . (clone $original)->addPart('month', 6 + 12),
-            '',
-            '' . (clone $original)->addPart('month', 4 + 12 + 12),
-            '' . (clone $original)->addPart('month', 5 + 12 + 12),
-            '' . (clone $original)->addPart('month', 6 + 12 + 12),
-            '',
-            '' . (clone $original)->subPart('month', 4),
-            '' . (clone $original)->subPart('month', 5),
-            '' . (clone $original)->subPart('month', 6),
-            '' . (clone $original)->subPart('month', 7),
-            '' . (clone $original)->subPart('month', 8),
-            '',
-            '' . (clone $original)->subPart('month', 4 + 12),
-            '' . (clone $original)->subPart('month', 5 + 12),
-            '' . (clone $original)->subPart('month', 6 + 12),
-            '' . (clone $original)->subPart('month', 7 + 12),
-            '' . (clone $original)->subPart('month', 8 + 12),
-            '',
-            '' . (clone $original)->subPart('month', 4 + 12 + 12),
-            '' . (clone $original)->subPart('month', 5 + 12 + 12),
-            '' . (clone $original)->subPart('month', 6 + 12 + 12),
-            '' . (clone $original)->subPart('month', 7 + 12 + 12),
-            '' . (clone $original)->subPart('month', 8 + 12 + 12)
-        ])
-    );
-
-    return;
-
-    //$list = (new PathList($utils->documentRoot() . '/backend/vendor/simplecomplex/utils'))
-    $list = (new PathList('/home/jacob/Documents'))
-        //->includeExtensions(['php'])
-        ->dirs()
-        ->skipUnreadable()
-        /*->customFilter(function(\SplFileInfo $item) {
-            return $item->getSize() >= 5000;
-        })*/
-        ->itemValue(function(\SplFileInfo $item) {
-            return is_readable($item->getPathname());
-        })
-        ->find();
-    $logger->debug(
-        "PathList\n"
-        . $inspect->variable($list->describe())
-    );
-
-    // Work...
-    $a = [
-        'a' => 'alpha',
-        'b' => 'beta',
-        'gamma'
-    ];
-    $b = [
-        'a' => 'skrid',
-        'b' => null,
-        'omega',
-        'c' => 'theta',
-    ];
-    $c = [
-    ];
-
-    $logger->debug(
-        "array_replace_recursive\n"
-        . $inspect->variable(array_replace_recursive($a, $b, $c))
-    );
-    $logger->debug(
-        "array_replace_recursive\n"
-        . $inspect->variable($utils->arrayMergeRecursive($a, $b, $c))
-    );
-    $logger->debug(
-        "array_replace_recursive\n"
-        . $inspect->variable(array_merge_recursive($a, $b, $c))
-    );
 })($environment);
 
 $environment->echoMessage('It worked :-)', 'success');
