@@ -1,3 +1,8 @@
+SimpleComplex/Utils 1.x, 2018-07-28
+-----------------------------------
+- CLI environment use .ini file for registering/loading
+  command providers.
+
 SimpleComplex/Utils 1.x, 2018-07-22
 -----------------------------------
 - CliEnvironment expose vendorDir property.
